<resources>
    <string name="app_name">UPlanner</string>
    <string name="action_display_month">Month View</string>
    <string name="action_display_week">Week View</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_exit">Exit</string>
    <string name="label_events">Events:</string>
    <string name="label_date">Date:</string>
    <string name="title_activity_display_week">DisplayWeek</string>
    <string name="label_monday">Mon</string>
    <string name="label_tuesday">Tues</string>
    <string name="label_wednesday">Wed</string>
    <string name="label_thursday">Thurs</string>
    <string name="label_friday">Fri</string>
    <string name="label_saturday">Sat</string>
    <string name="label_sunday">Sun</string>
    <string name="label_ok">Sun</string>
    <string name="action_today">Today</string>
    <string name="label_dialog_title">Event Title</string>
    <string name="label_dialog_description">Event Description</string>
    <string name="label_dialog_start_time">Start Time</string>
    <string name="label_dialog_end_time">End Time</string>
    <string name="label_dialog_finish_date">Finish Date</string>
    <string name="label_dialog_repeat">Select event to repeat on</string>
    <string name="label_dialog_delete">Delete Event</string>
    <string name="input_default_repeat">Forever</string>
</resources>
